--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,6 +19,7 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
+    namespace 'com.capacitorssidplugin.plugin'
     compileSdkVersion project.hasProperty('compileSdkVersion') ? rootProject.ext.compileSdkVersion : 33
     defaultConfig {
         minSdkVersion project.hasProperty('minSdkVersion') ? rootProject.ext.minSdkVersion : 22
