--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,6 @@
 // android/build.gradle
 ext {
-    javaVersion = JavaVersion.VERSION_1_8
+    javaVersion = JavaVersion.VERSION_17
     androidxAppCompatVersion = '1.4.2'
 }
 
@@ -35,8 +35,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
